--- a/panelViewer/dev/_/css.css
+++ b/panelViewer/dev/_/css.css
@@ -24,7 +24,6 @@
 }
 
 #main_container {
-  background: red;
   width: 100vw;
   display: flex;
   padding-top: 4rem;
@@ -49,11 +48,23 @@
   margin: 2rem 2rem 0 0;
   max-width: 12vw;
   height: 12vw;
-  background: blue;
+  /* max-height: 12vw; */
+  /* background: blue; */
   transition: all 0.75s;
+  display: flex;
 }
 
+/* Use JS to to listen to hover on img.panel instead */
+/* (will need to do that to update status anyway */
 .panel_cell:hover {
   max-width: 25vw;
   height: 25vw;
+}
+
+img.panel {
+  flex-shrink: 1;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 }
