--- a/panelViewer/dev/_/css.css
+++ b/panelViewer/dev/_/css.css
@@ -105,7 +105,7 @@
   width: calc(100%/ 6);
   height: 12vw;
   padding: 1.5vw;
-  transition: all 0.75s;
+  transition: width 0.75s, height 0.75s;
 }
 
 img.panel {
