--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -10,11 +10,13 @@
 
 #nav_container {
   width: 100vw;
-  height: 4rem;
+  height: auto;
   padding: 1rem 2rem;
   position: fixed;
-  background: black;
+  background: #fff;
+  border-bottom: 1px solid black;
   display: flex;
+  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); */
 }
 
 #nav_container .nav_item {
@@ -23,7 +25,7 @@
 }
 
 #nav_container .nav_item:first-child {
-  margin-left: calc(20% + 2.35rem);
+  margin-left: 20%;
 }
 
 #nav_container .nav_item:not(:last-child) {
@@ -31,16 +33,23 @@
 }
 
 .nav_item select {
+  /* height: 1rem; */
+  border-radius: 0%;
+  -webkit-appearance: none;
   width: 100%;
-  font-size: 1.5rem;
+  font-size: 1rem;
+  padding-bottom: .5rem;
   outline: none;
+  border: none;
+  border-bottom: 1px solid black;
   background: #fff;
+  position: relative;
 }
 
 #body_container {
   width: 100%;
   display: flex;
-  padding-top: 4rem;
+  padding-top: 3rem;
   min-height: 100vh;
 }
 
@@ -49,12 +58,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1.5rem 1.5rem;
+  padding: 2rem 1.5rem 1.5rem 1.5rem;
+  border-right: 1px solid black;
 }
 
 #sidebar .panel_info {
   position: relative;
-  width: 85%;
+  width: 100%;
   top: -2px;
   transition: all 0.65s;
   display: none;
@@ -83,10 +93,10 @@
 }
 
 #main_area {
-  flex: 4;
+  flex: 5;
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
+  padding: 2rem 1.5rem 1.5rem 3vw;
 }
 
 .panel_row {
