--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -9,23 +9,26 @@
 }
 
 #nav_container {
-  width: 100vw;
-  height: auto;
+  width: 100%;
+  height: 3.5rem;
   padding: 1rem 2rem;
   position: fixed;
+  left: 0;
   background: #fff;
   border-bottom: 1px solid black;
   display: flex;
-  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); */
+  
 }
 
 #nav_container .nav_item {
   flex: 1;
   margin: auto 0;
+  max-width: 15%;
+  position: relative;
 }
 
 #nav_container .nav_item:first-child {
-  margin-left: 20%;
+  margin-left: calc(100% / 6 + .5rem);
 }
 
 #nav_container .nav_item:not(:last-child) {
@@ -33,17 +36,28 @@
 }
 
 .nav_item select {
-  /* height: 1rem; */
-  border-radius: 0%;
-  -webkit-appearance: none;
-  width: 100%;
   font-size: 1rem;
+  letter-spacing: 0.5px;
+  width: 100%;
   padding-bottom: .5rem;
   outline: none;
+  border-radius: 0;
   border: none;
   border-bottom: 1px solid black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   background: #fff;
-  position: relative;
+}
+
+.nav_item::after {
+  content: "\25CD";
+  
+  position: absolute;
+  top: 0rem;
+  right: .5rem;
+  height: 1rem;
+  pointer-events: none;
+  transform: rotate(45deg);
 }
 
 #body_container {
@@ -71,7 +85,8 @@
 }
 
 #sidebar .panel_info h1 {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  text-align: center;
   font-weight: normal;
   margin: 0;
 }
@@ -80,7 +95,8 @@
 #sidebar_footnote span {
   font-size: 0.9rem;
   line-height: 125%;
-  margin: 0.75rem 0;
+  margin: 0.5rem 0;
+  letter-spacing: 0.5px;
 }
 
 #sidebar .panel_info.show {
