--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -46,6 +46,7 @@
 .nav_item::after {
   content: "\25CD";
   position: absolute;
+  font-size: 1.5rem;
   top: 0;
   right: 0;
   height: 1rem;
@@ -121,10 +122,17 @@
   padding: 1.5vw;
   transition: width 0.75s, height 0.75s;
   position: relative;
+  margin-right: -1px;
+  border-left: .5px solid black;
   border-right: .5px solid black;
   border-bottom: 1px solid black;
 }
-.panel_cell:last-child{
+
+.panel_cell:first-child {
+  border-left: 0;
+}
+
+.panel_cell:last-child {
   border-right: 0;
 }
 
@@ -136,6 +144,7 @@
   position: absolute;
   bottom: -.5vw;
   right: -.5vw;
+  z-index: 30;
 }
 
 .panel_cell::before {
@@ -146,6 +155,7 @@
   position: absolute;
   bottom: -.5vw;
   left: -.5vw;
+  z-index: 32;
 }
 
 img.panel {
