--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -108,7 +108,11 @@
 }
 
 #sidebar_footnote p {
-  margin: 0.25rem;
+  margin: 0.25rem 0;
+}
+
+#sidebar_footnote p:last-child {
+  margin-bottom: 0;
 }
 
 .legend_row {
@@ -119,11 +123,10 @@
 .symbol {
   position: absolute;
   width: 1rem;
-  left: -0.25rem;
 }
 
 .legend {
-  margin-left: 1.25rem;
+  margin-left: 1.5rem;
   width: 75%;
 }
 
