--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -46,7 +46,7 @@
 .nav_item::after {
   content: "\25CD";
   position: absolute;
-  font-size: 1.5rem;
+  font-size: 1rem;
   top: 0;
   right: 0;
   height: 1rem;
@@ -123,6 +123,10 @@
 .symbol {
   position: absolute;
   width: 1rem;
+}
+
+#sidebar_footnote .legend_row .symbol p {
+  font-size: 1rem;
 }
 
 .legend {
