empty cells close to clicked cell have top border; remove console.log

--- a/panelViewer/dev/web_prototype/_/css.css
+++ b/panelViewer/dev/web_prototype/_/css.css
@@ -190,8 +190,8 @@
   border-right: none;
 }
 
-.panel_row .empty_cell {
-  border: 0 !important;
+.panel_row .panel_cell.empty_cell {
+  border: 0;
 }
 
 .spacers {
